--- a/Dockerfile_download
+++ b/Dockerfile_download
@@ -1,3 +1,3 @@
 FROM busybox:1.34.1
 
-RUN wget -O soiling_dataset.zip https://drive.google.com/uc?export=download&id=1Id-K7SjwCqWkLwtIGJUj5Q0Dw0E_TP_9
+RUN wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1Id-K7SjwCqWkLwtIGJUj5Q0Dw0E_TP_9' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=1Id-K7SjwCqWkLwtIGJUj5Q0Dw0E_TP_9" -O /tmp/soiling_dataset.zip && rm -rf /tmp/cookies.txt
